<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="com.example.crazymath.view.MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:src="@drawable/ic_title"
        android:contentDescription="@string/ic_title"/>
    <View
        android:id="@+id/v_best_score"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/tv_play"
        android:text="@string/play"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/ic_play"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ic_play"/>
    <TextView
        android:id="@+id/tv_more"
        android:text="@string/more"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_more"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ic_more"/>
</LinearLayout>

